--- a/index.html
+++ b/index.html
@@ -1,37 +1,541 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COBA TV - Home</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #eaf3ff;
+      color: #00264d;
+      font-size: 18px;
+    }header {
+  background-color: #0047b3;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+header img {
+  width: 100%;
+  max-height: 350px;
+  object-fit: cover;
+  display: block;
+}
+
+nav {
+  background-color: #003366;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+nav a {
+  color: white;
+  margin: 0.5rem 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+main {
+  padding: 2rem;
+  text-align: center;
+}
+
+.section {
+  margin-bottom: 2rem;
+}
+
+footer {
+  background-color: #00264d;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+.social {
+  margin-top: 1rem;
+}
+
+.social a {
+  color: #ffffff;
+  margin: 0 0.5rem;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.social a:hover {
+  text-decoration: underline;
+}
+
+  </style>
 </head>
 <body>
   <header>
-    <h1>COBA TV</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="shorts.html">Shorts</a>
-      <a href="stories.html">Stories</a>
-      <a href="login.html">Login</a>
-    </nav>
-  </header>
+    <img src="banner.jpg" alt="COBA TV Banner" style="width: 100%; max-height: 350px; object-fit: cover;">
+    <h1 style="font-size: 36px; margin-top: 1rem;">Welcome to COBA TV</h1>
+    <p style="font-size: 20px;">Your community of animation, storytelling, and creativity</p>
+  </header>  <nav>
+    <a href="index.html">Home</a>
+    <a href="shorts.html">Short Videos</a>
+    <a href="stories.html">Storybooks</a>
+    <a href="login.html">Login</a>
+    <a href="copyright.html">Copyright</a>
+    <a href="privacy.html">Privacy</a>
+  </nav>  <main>
+    <div class="section">
+      <h2>What We Offer</h2>
+      <p>COBA TV is a home for creative animations, short stories, and educational videos created by a community of talented contributors. Whether you're a storyteller or a viewer, we welcome you to our growing hub.</p>
+    </div><div class="section">
+  <h2>Join the Movement</h2>
+  <p>We're building a world of colorful characters, exciting adventures, and magical stories. Be part of our storytelling revolution. Watch, read, or even contribute your own work!</p>
+</div>
 
-  <main>
-    <div class="card">
-      <h2>Welcome to COBA TV</h2>
-      <p>We are a creative community producing animated stories, fictional and non-fictional tales, and children's content. We also offer ghostwriting services.</p>
-    </div>
-
-    <div class="card">
-      <h2>Follow Us</h2>
-      <p>Email: <a href="mailto:officialcobatv@gmail.com">officialcobatv@gmail.com</a></p>
-      <p>Facebook: <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">COBA TV on Facebook</a></p>
-      <p><a href="privacy.html">Privacy Policy</a> | <a href="copyright.html">Copyright</a></p>
-    </div>
-  </main>
-
-  <footer>
+  </main>  <footer>
     <p>&copy; 2025 COBA TV. All rights reserved.</p>
+    <div class="social">
+      <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Facebook</a> |
+      <a href="mailto:officialcobatv@gmail.com">Email Us</a>
+    </div>
   </footer>
 </body>
-      </html>
+  </html><!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>COBA TV - Home</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #eaf3ff;
+      color: #00264d;
+      font-size: 18px;
+    }header {
+  background-color: #0047b3;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+header img {
+  width: 100%;
+  max-height: 350px;
+  object-fit: cover;
+  display: block;
+}
+
+nav {
+  background-color: #003366;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+nav a {
+  color: white;
+  margin: 0.5rem 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+main {
+  padding: 2rem;
+  text-align: center;
+}
+
+.section {
+  margin-bottom: 2rem;
+}
+
+footer {
+  background-color: #00264d;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+.social {
+  margin-top: 1rem;
+}
+
+.social a {
+  color: #ffffff;
+  margin: 0 0.5rem;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.social a:hover {
+  text-decoration: underline;
+}
+
+  </style>
+</head>
+<body>
+  <header>
+    <img src="banner.jpg" alt="COBA TV Banner" style="width: 100%; max-height: 350px; object-fit: cover;">
+    <h1 style="font-size: 36px; margin-top: 1rem;">Welcome to COBA TV</h1>
+    <p style="font-size: 20px;">Your community of animation, storytelling, and creativity</p>
+  </header>  <nav>
+    <a href="index.html">Home</a>
+    <a href="shorts.html">Short Videos</a>
+    <a href="stories.html">Storybooks</a>
+    <a href="login.html">Login</a>
+    <a href="copyright.html">Copyright</a>
+    <a href="privacy.html">Privacy</a>
+  </nav>  <main>
+    <div class="section">
+      <h2>What We Offer</h2>
+      <p>COBA TV is a home for creative animations, short stories, and educational videos created by a community of talented contributors. Whether you're a storyteller or a viewer, we welcome you to our growing hub.</p>
+    </div><div class="section">
+  <h2>Join the Movement</h2>
+  <p>We're building a world of colorful characters, exciting adventures, and magical stories. Be part of our storytelling revolution. Watch, read, or even contribute your own work!</p>
+</div>
+
+  </main>  <footer>
+    <p>&copy; 2025 COBA TV. All rights reserved.</p>
+    <div class="social">
+      <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Facebook</a> |
+      <a href="mailto:officialcobatv@gmail.com">Email Us</a>
+    </div>
+  </footer>
+</body>
+  </html><!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>COBA TV - Home</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #eaf3ff;
+      color: #00264d;
+      font-size: 18px;
+    }header {
+  background-color: #0047b3;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+header img {
+  width: 100%;
+  max-height: 350px;
+  object-fit: cover;
+  display: block;
+}
+
+nav {
+  background-color: #003366;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+nav a {
+  color: white;
+  margin: 0.5rem 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+main {
+  padding: 2rem;
+  text-align: center;
+}
+
+.section {
+  margin-bottom: 2rem;
+}
+
+footer {
+  background-color: #00264d;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+.social {
+  margin-top: 1rem;
+}
+
+.social a {
+  color: #ffffff;
+  margin: 0 0.5rem;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.social a:hover {
+  text-decoration: underline;
+}
+
+  </style>
+</head>
+<body>
+  <header>
+    <img src="banner.jpg" alt="COBA TV Banner" style="width: 100%; max-height: 350px; object-fit: cover;">
+    <h1 style="font-size: 36px; margin-top: 1rem;">Welcome to COBA TV</h1>
+    <p style="font-size: 20px;">Your community of animation, storytelling, and creativity</p>
+  </header>  <nav>
+    <a href="index.html">Home</a>
+    <a href="shorts.html">Short Videos</a>
+    <a href="stories.html">Storybooks</a>
+    <a href="login.html">Login</a>
+    <a href="copyright.html">Copyright</a>
+    <a href="privacy.html">Privacy</a>
+  </nav>  <main>
+    <div class="section">
+      <h2>What We Offer</h2>
+      <p>COBA TV is a home for creative animations, short stories, and educational videos created by a community of talented contributors. Whether you're a storyteller or a viewer, we welcome you to our growing hub.</p>
+    </div><div class="section">
+  <h2>Join the Movement</h2>
+  <p>We're building a world of colorful characters, exciting adventures, and magical stories. Be part of our storytelling revolution. Watch, read, or even contribute your own work!</p>
+</div>
+
+  </main>  <footer>
+    <p>&copy; 2025 COBA TV. All rights reserved.</p>
+    <div class="social">
+      <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Facebook</a> |
+      <a href="mailto:officialcobatv@gmail.com">Email Us</a>
+    </div>
+  </footer>
+</body>
+      </html><!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>COBA TV - Home</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #eaf3ff;
+      color: #00264d;
+      font-size: 18px;
+    }header {
+  background-color: #0047b3;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+header img {
+  width: 100%;
+  max-height: 350px;
+  object-fit: cover;
+  display: block;
+}
+
+nav {
+  background-color: #003366;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+nav a {
+  color: white;
+  margin: 0.5rem 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+main {
+  padding: 2rem;
+  text-align: center;
+}
+
+.section {
+  margin-bottom: 2rem;
+}
+
+footer {
+  background-color: #00264d;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+.social {
+  margin-top: 1rem;
+}
+
+.social a {
+  color: #ffffff;
+  margin: 0 0.5rem;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.social a:hover {
+  text-decoration: underline;
+}
+
+  </style>
+</head>
+<body>
+  <header>
+    <img src="banner.jpg" alt="COBA TV Banner" style="width: 100%; max-height: 350px; object-fit: cover;">
+    <h1 style="font-size: 36px; margin-top: 1rem;">Welcome to COBA TV</h1>
+    <p style="font-size: 20px;">Your community of animation, storytelling, and creativity</p>
+  </header>  <nav>
+    <a href="index.html">Home</a>
+    <a href="shorts.html">Short Videos</a>
+    <a href="stories.html">Storybooks</a>
+    <a href="login.html">Login</a>
+    <a href="copyright.html">Copyright</a>
+    <a href="privacy.html">Privacy</a>
+  </nav>  <main>
+    <div class="section">
+      <h2>What We Offer</h2>
+      <p>COBA TV is a home for creative animations, short stories, and educational videos created by a community of talented contributors. Whether you're a storyteller or a viewer, we welcome you to our growing hub.</p>
+    </div><div class="section">
+  <h2>Join the Movement</h2>
+  <p>We're building a world of colorful characters, exciting adventures, and magical stories. Be part of our storytelling revolution. Watch, read, or even contribute your own work!</p>
+</div>
+
+  </main>  <footer>
+    <p>&copy; 2025 COBA TV. All rights reserved.</p>
+    <div class="social">
+      <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Facebook</a> |
+      <a href="mailto:officialcobatv@gmail.com">Email Us</a>
+    </div>
+  </footer>
+</body>
+  </html><!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>COBA TV - Home</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #eaf3ff;
+      color: #00264d;
+      font-size: 18px;
+    }header {
+  background-color: #0047b3;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+header img {
+  width: 100%;
+  max-height: 350px;
+  object-fit: cover;
+  display: block;
+}
+
+nav {
+  background-color: #003366;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+nav a {
+  color: white;
+  margin: 0.5rem 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+main {
+  padding: 2rem;
+  text-align: center;
+}
+
+.section {
+  margin-bottom: 2rem;
+}
+
+footer {
+  background-color: #00264d;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+.social {
+  margin-top: 1rem;
+}
+
+.social a {
+  color: #ffffff;
+  margin: 0 0.5rem;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.social a:hover {
+  text-decoration: underline;
+}
+
+  </style>
+</head>
+<body>
+  <header>
+    <img src="banner.jpg" alt="COBA TV Banner" style="width: 100%; max-height: 350px; object-fit: cover;">
+    <h1 style="font-size: 36px; margin-top: 1rem;">Welcome to COBA TV</h1>
+    <p style="font-size: 20px;">Your community of animation, storytelling, and creativity</p>
+  </header>  <nav>
+    <a href="index.html">Home</a>
+    <a href="shorts.html">Short Videos</a>
+    <a href="stories.html">Storybooks</a>
+    <a href="login.html">Login</a>
+    <a href="copyright.html">Copyright</a>
+    <a href="privacy.html">Privacy</a>
+  </nav>  <main>
+    <div class="section">
+      <h2>What We Offer</h2>
+      <p>COBA TV is a home for creative animations, short stories, and educational videos created by a community of talented contributors. Whether you're a storyteller or a viewer, we welcome you to our growing hub.</p>
+    </div><div class="section">
+  <h2>Join the Movement</h2>
+  <p>We're building a world of colorful characters, exciting adventures, and magical stories. Be part of our storytelling revolution. Watch, read, or even contribute your own work!</p>
+</div>
+
+  </main>  <footer>
+    <p>&copy; 2025 COBA TV. All rights reserved.</p>
+    <div class="social">
+      <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Facebook</a> |
+      <a href="mailto:officialcobatv@gmail.com">Email Us</a>
+    </div>
+  </footer>
+</body>
+    </html>
