--- a/shorts.html
+++ b/shorts.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>COBA TV - Shorts</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>COBA TV Shorts</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>COBA TV</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="shorts.html">Shorts</a>
-      <a href="stories.html">Stories</a>
-      <a href="login.html">Login</a>
-    </nav>
+
+  <header class="site-header">
+    <h1>🎬 COBA TV Shorts</h1>
+    <p>Enjoy fun and fast animated stories anytime!</p>
   </header>
 
   <main>
-    <h2>Featured Shorts</h2>
-    <div class="card">
-      <p>This section will showcase animated short videos like TikTok style.</p>
-    </div>
+    <section id="shorts-section">
+      <div class="shorts-container">
+        <div class="video-wrapper">
+          <video controls poster="images/short-thumbnail.jpg">
+            <source src="coba_short1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+
+        <div class="short-info">
+          <h2>Short Title: The Magical Start</h2>
+          <p>This is the first animated short from COBA TV — a magical, fast-paced mini story to introduce the COBA world!</p>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 COBA TV</p>
+  <footer class="site-footer">
+    <p>&copy; 2025 COBA TV. All rights reserved.</p>
   </footer>
+
 </body>
-                         </html>
+  </html>
