--- a/index.html
+++ b/index.html
@@ -1,53 +1,168 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>COBA TV - Home</title>
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+    }body {
+  background-color: #f5f6fa;
+  color: #333;
+}
+
+header {
+  background: linear-gradient(to right, #2c3e50, #3498db);
+  color: white;
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .logo {
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
+nav.top-nav a {
+  color: white;
+  margin-left: 20px;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.banner {
+  background: url('banner-placeholder.jpg') center/cover no-repeat;
+  height: 220px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 2rem;
+  text-shadow: 1px 1px 3px #000;
+}
+
+main {
+  padding: 20px;
+}
+
+.section-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.card {
+  background: white;
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  transition: transform 0.2s;
+}
+
+.card:hover {
+  transform: translateY(-4px);
+}
+
+.card h3 {
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 0.95rem;
+  color: #555;
+}
+
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: white;
+  border-top: 1px solid #ddd;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 8px 0;
+  z-index: 1000;
+}
+
+.bottom-nav button, .bottom-nav a {
+  background: none;
+  border: none;
+  color: #555;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+.upload-btn {
+  background: #3498db;
+  color: white;
+  border-radius: 50%;
+  padding: 14px;
+  font-size: 1.5rem;
+  position: relative;
+  top: -20px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+footer {
+  text-align: center;
+  font-size: 0.9rem;
+  color: #888;
+  margin-top: 40px;
+  margin-bottom: 60px;
+}
+
+@media (max-width: 600px) {
+  .banner {
+    font-size: 1.5rem;
+  }
+}
+
+  </style>
 </head>
-<body>
-
-  <!-- Top Navigation Bar -->
-  <header class="top-navbar">
+<body>  <!-- Top Navigation -->  <header>
     <div class="logo">📺 COBA TV</div>
-    <nav class="top-nav-links">
-      <a href="index.html">Home</a>
-      <a href="shorts.html">Shorts</a>
-      <a href="#">Stories</a>
+    <nav class="top-nav">
+      <a href="#">Home</a>
       <a href="#">About</a>
+      <a href="#">Stories</a>
+      <a href="#">Videos</a>
+      <a href="#">Contact</a>
     </nav>
-  </header>
-
-  <!-- Main Content Area -->
-  <main class="homepage-main">
-    <section class="hero-section">
-      <h1>Welcome to COBA TV</h1>
-      <p>Explore magical animated stories, fun shorts, and more.</p>
-    </section>
-
-    <section class="featured-box">
-      <h2>🔥 Featured Video</h2>
-      <video controls poster="images/short-thumbnail.jpg">
-        <source src="coba_short1.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </section>
-
-    <section class="home-buttons">
-      <a href="shorts.html" class="big-button">🎬 Watch Shorts</a>
-      <a href="#" class="big-button">📖 Read Stories</a>
-      <a href="mailto:officialcobatv@gmail.com" class="big-button">📩 Contact Us</a>
-    </section>
-  </main>
-
-  <!-- Bottom Sticky Navigation -->
-  <footer class="bottom-navbar">
-    <a href="index.html">🏠 Home</a>
-    <a href="shorts.html">🎬 Shorts</a>
-    <a href="#">📚 Stories</a>
-    <a href="#">👤 Profile</a>
-  </footer>
-
-</body>
-      </html>
+  </header>  <!-- Banner Section -->  <div class="banner">
+    Welcome to COBA TV — Where Stories Come Alive!
+  </div>  <!-- Main Sections -->  <main>
+    <div class="section-grid">
+      <div class="card">
+        <h3>📚 Storybooks</h3>
+        <p>Read amazing animated and realistic stories for kids and adults. Click covers to open stories.</p>
+      </div>
+      <div class="card">
+        <h3>🎥 Short Videos</h3>
+        <p>Watch short animated clips and episodes — swipe, like, and enjoy storytelling like never before.</p>
+      </div>
+      <div class="card">
+        <h3>🚀 Upload Center</h3>
+        <p>Create and upload your own content to COBA TV — animations, stories, or shows.</p>
+      </div>
+      <div class="card">
+        <h3>📬 Contact & Follow</h3>
+        <p>Email us at <b>officialcobatv@gmail.com</b> or follow us on <a href="https://www.facebook.com/share/16qPiKetMk/" target="_blank">Facebook</a>.</p>
+      </div>
+    </div>
+  </main>  <!-- Bottom Navigation -->  <nav class="bottom-nav">
+    <a href="#">🏠</a>
+    <a href="#">👤</a>
+    <button class="upload-btn">＋</button>
+    <a href="#">❤️</a>
+    <a href="#">⚙️</a>
+  </nav>  <footer>
+    © 2025 COBA TV. All rights reserved.
+  </footer></body>
+  </html>
