--- a/index.html
+++ b/index.html
@@ -37,14 +37,21 @@ nav.top-nav a {
 }
 
 .banner {
+  position: relative;
   background: url('banner-placeholder.jpg') center/cover no-repeat;
-  height: 220px;
+  height: 250px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+}
+
+.banner-text {
+  position: absolute;
+  text-align: center;
   color: white;
   font-size: 2rem;
-  text-shadow: 1px 1px 3px #000;
+  text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
+  padding: 0 20px;
 }
 
 main {
@@ -119,8 +126,8 @@ footer {
 }
 
 @media (max-width: 600px) {
-  .banner {
-    font-size: 1.5rem;
+  .banner-text {
+    font-size: 1.4rem;
   }
 }
 
@@ -136,7 +143,9 @@ footer {
       <a href="#">Contact</a>
     </nav>
   </header>  <!-- Banner Section -->  <div class="banner">
-    Welcome to COBA TV — Where Stories Come Alive!
+    <div class="banner-text">
+      Welcome to COBA TV — Where Stories Come Alive!
+    </div>
   </div>  <!-- Main Sections -->  <main>
     <div class="section-grid">
       <div class="card">
@@ -165,4 +174,4 @@ footer {
   </nav>  <footer>
     © 2025 COBA TV. All rights reserved.
   </footer></body>
-  </html>
+        </html>
