--- a/index.html
+++ b/index.html
@@ -38,19 +38,28 @@ nav.top-nav a {
 
 .banner {
   position: relative;
-  background: url('banner-placeholder.jpg') center/cover no-repeat;
-  height: 250px;
+  background: url('coba-tv-banner.jpg') center/cover no-repeat;
+  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.banner-text {
+.banner::before {
+  content: "";
   position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0,0,0,0.4);
+  z-index: 1;
+}
+
+.banner-text {
+  position: relative;
+  z-index: 2;
   text-align: center;
   color: white;
   font-size: 2rem;
-  text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
+  text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
   padding: 0 20px;
 }
 
@@ -174,4 +183,4 @@ footer {
   </nav>  <footer>
     © 2025 COBA TV. All rights reserved.
   </footer></body>
-        </html>
+                                        </html>
