--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@ footer {
       </div>
     </div>
   </main>  <!-- Bottom Navigation -->  <nav class="bottom-nav">
-    <a href="#">🏠</a>
+    <a href="#">home</a>
     <a href="#">👤</a>
     <button class="upload-btn">＋</button>
-    <a href="#">❤️</a>
+    <a href="#">message</a>
     <a href="#">⚙️</a>
   </nav>  <footer>
     © 2025 COBA TV. All rights reserved.
