--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@ main h2 {
     <button>Home</button>
     <button>Stories</button>
     <button>About</button>
-    <button>Contact</button>
+    <a href="contact.html" style="text-decoration: none;">
+  <button style="padding: 10px 20px; background-color: #0066cc; color: white; border: none; border-radius: 5px;">Contact</button>
+      </a>
     <input class="search-bar" type="text" placeholder="Search..." />
   </nav>  <main>
     <h2>Enjoy Amazing Animated Stories</h2>
