--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ main h2 {
   </div>  <nav class="top-nav">
     <button>Home</button>
     <button>Stories</button>
-    <button>video</button>
+    <button>videos</button>
     <a href="contact.html" style="text-decoration: none;">
-  <button style="padding: 10px 20px; background-color: #0066cc; color: white; border: none; border-radius: 5px;"> Contact</button>
+  <button style="padding: 10px 20px; background-color: #0066cc; color: blue; border: white; border-radius: 5px;"> Contact</button>
       </a>
     <input class="search-bar" type="text" placeholder="Search..." />
   </nav>  <main>
