--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ main h2 {
     <button>Stories</button>
     <button>videos</button>
     <a href="contact.html" style="text-decoration: none;">
-  <button style="padding: 10px 20px; background-color: #ffffff; color: blue; border: none; border-radius: 10px;"> Contact</button>
+  <button style="padding: 10px 20px; background-color: #ffffff; color: #2563eb; border: none; border-radius: 50px;"> Contact</button>
       </a>
     <input class="search-bar" type="text" placeholder="Search..." />
   </nav>  <main>
