--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@ main h2 {
     <button>Stories</button>
     <button>videos</button>
     <a href="contact.html" style="text-decoration: none;">
-  <button style="padding: 10px 20px; background-color: #ffffff; color: #2563eb; border: none; border-radius: 50px;"> Contact</button>
+  <button style="padding: 10px 20px; background-color: #ffffff; color: #2563eb; border: none; border-radius: 20px;"> Contact</button>
       </a>
     <input class="search-bar" type="text" placeholder="Search..." />
   </nav>  <main>
     <h2>Enjoy Amazing Animated Stories</h2>
-    <p>Tap the plus (+) button below to upload your story.</p>
+    <p>Explore amazing stories and animated adventures from your screen.</p>
   </main>  <nav class="bottom-nav">
     <button>Profile</button>
     <button class="plus-button">+</button>
