--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ main h2 {
     <div class="banner-text">Welcome to COBA TV!</div>
   </div>  <nav class="top-nav">
     <button>Home</button>
-    <button>Stories</button>
+    <button onclick="location.href='story.html'">Stories</button>
     <button>videos</button>
     <a href="contact.html" style="text-decoration: none;">
   <button style="padding: 10px 20px; background-color: #ffffff; color: #2563eb; border: none; border-radius: 20px;"> Contact</button>
