--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </header>
   <nav>
     <a href="index.html">Home</a>
-    <a href="story.html">Stories</a>
+    <button onclick="location.href='story.html'">Stories</button>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
   </nav>
